added toggle_service post function

--- a/views/seller/store_panel/goods_delivery.erb
+++ b/views/seller/store_panel/goods_delivery.erb
@@ -19,7 +19,7 @@
                                     <input 
                                         class="form-check-input service-toggle" 
                                         type="checkbox" 
-                                        id="service_<%service['service_id'] %>"
+                                        id="service_<%= service['service_id'] %>"
                                         data-service-id="<%= service['service_id'] %>"
                                         <%= active ? 'checked' : '' %>>
                                     <label class="form-check-label" for="service_<%= service['service_id'] %>">
