--- a/views/layouts/admin/sidebar.erb
+++ b/views/layouts/admin/sidebar.erb
@@ -47,6 +47,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-truck"></i></div>
                         Goods Delivery 
                     </a>
+                    <a class="nav-link" href="/view_delivery/<%= current_user['user_id'] %>">
+                        <div class="sb-nav-link-icon"><i class="fas fa-truck"></i></div>
+                        View Delivery 
+                    </a>
                     <a class="nav-link" href="/users_wishlist/<%= current_user['user_id'] %>">
                         <div class="sb-nav-link-icon"><i class="fa-solid fa-heart"></i></div>
                         User Wishlists
