--- a/views/user/items/transaction_lists.erb
+++ b/views/user/items/transaction_lists.erb
@@ -185,7 +185,7 @@
                                                 <% active_services = active_store_services_for(trx['store_id']) %>
                                                 <% if active_services.any? %>
                                                     <% active_services.each do |service| %>
-                                                        <option value="<%= service['service_name'] %>">
+                                                        <option value="<%= service['store_service_id'] %>">
                                                             <%= service['service_name'] %> - <%= rupiah_currency(service['fee']) %>
                                                         </option>
                                                     <% end %>
@@ -193,6 +193,13 @@
                                                     <option disabled>No active shipping service available</option>
                                                 <% end %>
                                             </select>
+                                            <% if defined?(@field_errors) && 
+                                                @field_errors['transaction_id'].to_s == trx['transaction_id'].to_s && 
+                                                @field_errors['errors']['service_name'] %>
+                                                <div class="form-text text-danger">
+                                                    <%= @field_errors['errors']['service_name'] %>
+                                                </div>
+                                            <% end %>
                                         </div>
 
                                         <div class="row">
