updated transaction_lists page

--- a/views/user/items/transaction_lists.erb
+++ b/views/user/items/transaction_lists.erb
@@ -272,6 +272,13 @@
                                         </div>
 
                                         <div class="mb-3 row">
+                                            <label class="col-sm-2 col-form-label">Delivery</label>
+                                            <div class="col-sm-10">
+                                                <input type="text" readonly class="form-control-plaintext" value="#">
+                                            </div>
+                                        </div>
+
+                                        <div class="mb-3 row">
                                             <label class="col-sm-2 col-form-label">Status Pembayaran : </label>
                                             <% if trx['payment_status'] == 'Paid' %>
                                                 <span class="badge bg-success">Paid</span>  
