--- a/views/user/items/transaction_lists.erb
+++ b/views/user/items/transaction_lists.erb
@@ -272,13 +272,6 @@
                                         </div>
 
                                         <div class="mb-3 row">
-                                            <label class="col-sm-2 col-form-label">Delivery</label>
-                                            <div class="col-sm-10">
-                                                <input type="text" readonly class="form-control-plaintext" value="#">
-                                            </div>
-                                        </div>
-
-                                        <div class="mb-3 row">
                                             <label class="col-sm-2 col-form-label">Status Pembayaran : </label>
                                             <% if trx['payment_status'] == 'Paid' %>
                                                 <span class="badge bg-success">Paid</span>  
@@ -295,7 +288,7 @@
                                             </label>
                                             <div class="col-sm-10">
                                                 <% if trx['store_service_id'] %>
-                                                    <% service = DB.execute("SELECT s.service_name FROM store_services ss JOIN services s ON ss.service_id = s.service_id WHERE ss.store_service_id = ?", [trx['store_service_id']]).first %>
+                                                    <% service = DB.execute("SELECT s.service_name FROM store_services ss JOIN services s ON ss.service_id WHERE ss.store_service_id = ?", [trx['store_service_id']]).first %>
                                                     <input type="text" readonly class="form-control-plaintext" value="<%= service ? service['service_name'] : 'N/A' %>">
                                                 <% else %>
                                                     <input type="text" readonly class="form-control-plaintext" value="N/A">
