--- a/views/user/items/transaction.erb
+++ b/views/user/items/transaction.erb
@@ -72,6 +72,10 @@
                         <p class="card-text mb-1">
                             <b>Address:</b> <%= @transaction['store_address'] %>
                         </p>
+
+                        <p class="card-text mb-1">
+                            <b>Service Name</b> <%= @transaction['store_service_id'] %>
+                        </p>
                         
                         <p class="card-text">
                             <small class="text-body-secondary float-end">
