--- a/views/user/items/transaction_lists.erb
+++ b/views/user/items/transaction_lists.erb
@@ -202,9 +202,9 @@
                                             </select>
                                             <% if defined?(@field_errors) && 
                                                 @field_errors['transaction_id'].to_s == trx['transaction_id'].to_s && 
-                                                @field_errors['errors']['delivery'] %>
+                                                @field_errors['errors']['store_service_id'] %>
                                                 <div class="form-text text-danger">
-                                                    <%= @field_errors['errors']['delivery'] %>
+                                                    <%= @field_errors['errors']['store_service_id'] %>
                                                 </div>
                                             <% end %>
                                         </div>
