--- a/views/user/items/transaction.erb
+++ b/views/user/items/transaction.erb
@@ -1,6 +1,17 @@
 <div class="container mt-4">
-    <h3>Detail My Transaction</h3>
-    <hr>
+    <div class="row">
+        <div class="col-10">
+            <h3>Detail My Transaction</h3>
+        </div>
+        <div class="col-2">
+            <a href="/transaction_lists" class="btn btn-outline-secondary float-end">Back</a>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <hr>
+        </div>
+    </div>
 
     <div class="card mb-4">
         <% if @transaction %>
